2006-12-10  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	* autogen.sh:
	  - Bump the minimum required version of autoconf to 2.60, since it's
	    the minimum required version :)

2006-12-10  Christian Persch  <chpe@cvs.gnome.org>

	* data/icons/hicolor/128x128/apps/Makefile.am:
	* data/icons/hicolor/16x16/apps/Makefile.am:
	* data/icons/hicolor/22x22/apps/Makefile.am:
	* data/icons/hicolor/48x48/apps/Makefile.am:
	* data/icons/hicolor/scalable/apps/Makefile.am:
	  - Install the icons in the app sharedir, not the global one.

	* src/fe-gnome/Makefile.am:
	* src/fe-gnome/pixmaps.c: (pixmaps_init):
	  - Append the app icon dir to the theme directories, so xchat-gnome
	    can find its icons. Bug #384160.

2006-12-10  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.h:
	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/main-window.c:
	* src/fe-gnome/gui.c:
	* src/fe-gnome/gui.h:
	* src/fe-gnome/navigation-tree.c:
	* data/xchat-gnome-ui.xml:
	  - Set action sensitivity correctly.

2006-12-09  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/navigation-tree.h:
	* src/fe-gnome/navigation-tree.c:
	  - Implement a couple more loose ends from the navtree rework.

2006-12-09  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	  - Open existing channels/queries when clicking on them in the
	    conversation panel.

2006-12-09  David Trowbridge <trowbrds@gmail.com>

	* src/common/fe.h:
	* src/fe-gnome/navigation-tree.h:
	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/util.c:
	* src/fe-gnome/util.h:
	* src/fe-gnome/main-window.c:
	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/irc-network.c:
	* src/fe-gnome/gui.c:
	* src/fe-gnome/topic-label.c:
	* src/fe-gnome/connect-dialog.c:
	* src/fe-gnome/userlist.c:
	* src/fe-gnome/navigation-tree.c:
	* data/xchat-gnome-ui.xml:
	  - Merge r10989:11029 from navtree-rework branch.
